# SFMLGameEngine

./: .gitignore  CMakeLists.txt
GameEngine_lib/: CMakeLists.txt  CircleComponent.cpp  CircleComponent.h  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Globals.cpp  Globals.h  MoverComponent.cpp  MoverComponent.h
